Fri Oct  2 13:38:52 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_getpid): simply call GetCurrentProcessId()
	  instead of calling MSVCRT's getpid().

Sat Sep 26 13:32:00 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/net/http.rb (transport_request): Handle timeout error by
	  closing socket if exception raised. [ruby-core:20976]

Fri Sep 25 04:34:08 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/rational.rb (#+, #-, #/, #**, #<=>): Return correct error
	  message in case coercion fails. Based on a patch by Run Paint Run Run
	  [ruby-core:23903]

Thu Sep 24 15:52:34 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* instruby.rb: win32/win32.h exists in srcdir.
	  reported by arton ( http://www.artonx.org/diary/20090919.html#p01 )

Thu Sep 24 12:30:50 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (subtract): if the parameters are same value, should
	  return zero.

Thu Sep 24 12:01:11 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_select): of course, need to initialize rest.

Thu Sep 24 10:26:16 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* ext/openssl/ossl_config.c (ossl_config_add_value_m,
	  ossl_config_set_section): Check if frozen (or untainted for $SECURE >=
	  4) [ruby-core:18377]

Thu Sep 24 10:06:19 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/mathn.rb (Fixnum#**, Float#**, Bignum#**): Allow fractional
	  power for negative numbers when 'mathn' is required [redmine:783]

Wed Sep 23 05:36:55 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* eval.c (umethod_bind): Fix bug that disallowed methods from
	  singleton classes to be used for UnboundMethod#bind and
	  Module#define_method, even when that singleton class was of the right
	  kind_of [ruby-core:25632]

Sun Sep 20 09:53:35 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/open3.rb (Open3#popen3): fixed and improved rdoc.  [ruby-core:25658]
